Fixing path to JS files

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>Password Strength Tester</title>
-    <script type="text/javascript" src="../lib/password-strength.js"></script>
-    <script type="text/javascript" src="demo.js"></script>
+    <script type="text/javascript" src="javascripts/password-strength.js"></script>
+    <script type="text/javascript" src="javascripts/demo.js"></script>
   </head>
 
   <body>
