Compressing output and adding labels

--- a/index.html
+++ b/index.html
@@ -45,10 +45,13 @@
 
 <p id="commonXhttp">Loading common words ...</p>
 <p id="frequencyXhttp">Loading frequency table ...</p>
+
 <div id="PasswordInfo">
+    Type your password in here:
     <form>
         <input id="PasswordField" type="password" autocomplete="off" autofocus="autofocus" />
     </form>
+    Here are the results:
     <div id="PasswordStatistics"></div>
 </div>
 
