Adding a blurb describing the demo page

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 <h2>
 <a id="demo" class="anchor" href="#demo" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Demo</h2>
 
+<p>This is a live demo of the password strength testing code.  The results are generated automatically as you type.  This also loads the optional letter trigraph frequencies and common password list for improved statistics.</p>
+
 <p id="commonXhttp">Loading common words ...</p>
 <p id="frequencyXhttp">Loading frequency table ...</p>
 
