add trigraphs via addTrigraphMap
not addCommonPasswords... the README in master has the correct method

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         window.passwordStrength.addCommonPasswords(data);
     });
     $.getJSON("path/to/data/trigraphs.json", function (data) {
-        window.passwordStrength.addCommonPasswords(data);
+        window.passwordStrength.addTrigraphMap(data);
     });
 });
 </code></pre>
